--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-	"name": "react-webpack-es6-chunking",
-	"version": "1.0.0",
-	"description": "ES6 react + webpack + react-router + code-chunking starter project",
+	"name": "react-router-code-chunking-example",
+	"version": "1.1.0",
+	"description": "React + react-router code-chunking example",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/JFusco/react-webpack-es6-chunking"
+		"url": "https://github.com/JFusco/react-router-code-chunking-example"
 	},
 	"dependencies": {
-		"react": "~15.2.1",
-		"react-router": "~2.5.2",
-		"react-dom": "~15.2.1"
+		"react": "~15.3.0",
+		"react-dom": "~15.3.0",
+		"react-router": "~2.6.1"
 	},
 	"devDependencies": {
 		"babel-cli": "^6.10.1",
-	    "babel-core": "^6.10.4",
-	    "babel-loader": "^6.2.4",
-	    "babel-register": "^6.9.0",
-	    "babel-preset-react": "^6.11.1",
-	    "babel-preset-es2015": "^6.9.0",
-	    "http-server": "^0.9.0",
-	    "webpack": "^1.13.1"
+		"babel-core": "^6.10.4",
+		"babel-loader": "^6.2.4",
+		"babel-preset-es2015": "^6.9.0",
+		"babel-preset-react": "^6.11.1",
+		"babel-preset-stage-2": "^6.11.0",
+		"babel-register": "^6.9.0",
+		"webpack": "^1.13.1",
+		"webpack-dev-server": "^1.14.1"
 	},
 	"scripts": {
-		"serve": "http-server ./",
-		"compile": "webpack --display-chunks --display-modules --progress --colors && npm run serve"
+		"dev": "./node_modules/.bin/webpack-dev-server --content-base ./ --inline --hot",
+		"test": "echo \"Error: no test specified\" && exit 1"
 	}
 }
